--- a/J1.S.P0061/nbproject/project.properties
+++ b/J1.S.P0061/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/J1.S.P0061.jar
+dist.jar=${dist.dir}/Calculate.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/J1.S.P0061
+dist.jlink.output=${dist.jlink.dir}/Calculate
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=J1.S.P0061
-main.class=program.Main
+jlink.launcher.name=Calculate
+main.class=controller.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
